--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -68,7 +68,7 @@ requirements:
     - flatbuffers                            # [build_platform != target_platform]
     - onednn                                 # [build_platform != target_platform]
     - onednn-cpu-threadpool                  # [build_platform != target_platform]
-    - pybind11 2                               # [build_platform != target_platform]
+    - pybind11 2                             # [build_platform != target_platform]
     - numpy {{ numpy }}                      # [build_platform != target_platform]
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
@@ -84,6 +84,7 @@ requirements:
     - coreutils  # [cuda_compiler_version != "None"]
     - patch      # [unix]
     - m2-patch   # [win]
+    - rsync
   host:
     # GPU requirements for CUDA
     - cudnn      # [cuda_compiler_version != "None"]
