--- a/abs.yaml
+++ b/abs.yaml
@@ -2,10 +2,10 @@
 build_parameters:
   - "--suppress-variables"
   - "--skip-existing"
+  - "--error-overlinking"
   - "--variants \"{skip_cuda_prefect: True}\""
   - "--python=3.12"
   - "--numpy=1.26"
-  #- "--error-overlinking"
 
 channels:
   - https://staging.continuum.io/prefect/fs/tensorboard-feedstock/pr1/3cd3dfd
@@ -13,3 +13,6 @@ channels:
   - https://staging.continuum.io/prefect/fs/libml_dtypes-headers-feedstock/pr1/3fd497b
   - https://staging.continuum.io/prefect/fs/popt-feedstock/pr2/c3cc730
   - https://staging.continuum.io/prefect/fs/rsync-feedstock/pr2/e537eea
+  - https://staging.continuum.io/prefect/fs/optree-feedstock/pr2/e537eea
+  - https://staging.continuum.io/prefect/fs/keras-feedstock/pr4/9b67f95
+  - https://staging.continuum.io/prefect/fs/snappy-feedstock/pr5/f29c581
