set keras tensorflow explicitly

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -297,6 +297,9 @@ outputs:
       imports:
         - tensorflow
       commands:
+        # override any potential keras config file on the builder
+        - set KERAS_BACKEND=tensorflow     # [win]
+        - export KERAS_BACKEND=tensorflow  # [not win]
         - pip check                  # [build_platform == target_platform]
         - cat test_tensorflow.py     # [unix]
         - python test_tensorflow.py  # [build_platform == target_platform]
