--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -55,7 +55,8 @@ build:
   number: {{ build }}
   skip: true  # [win or s390x]
   skip: true  # [python_impl == 'pypy']
-  skip: true  # [py<39]
+  # https://www.tensorflow.org/install/source#tested_build_configurations
+  skip: true  # [py<39 or py>312]
   skip: true  # [skip_cuda_prefect and (gpu_variant or "").startswith('cuda')]
 
 requirements:
