--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -61,7 +61,7 @@ build:
 
 requirements:
   build:
-    - perl                                   # [linux]
+    - perl                                   # [win or linux]
     - python                                 # [build_platform != target_platform]
     - cython                                 # [build_platform != target_platform]
     - cross-python_{{ target_platform }}     # [build_platform != target_platform]
@@ -93,6 +93,7 @@ requirements:
     - patch      # [unix]
     - m2-patch   # [win]
     - rsync      # [unix]
+    - sqlite     # [win]
   host:
     # GPU requirements for CUDA
     - cudnn      # [cuda_compiler_version != "None"]
