--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -352,9 +352,9 @@ outputs:
         # decide on the cuda variant
         # https://github.com/conda-forge/tensorflow-feedstock/issues/162
         - {{ compiler('cuda') }}                   # [cuda_compiler_version != "None"]
-        - clang    # [win]
-        - llvmdev  # [win]
-        - lld      # [win]
+        - clang 17.0.6    # [win]
+        - llvmdev 17.0.6  # [win]
+        - lld             # [win]
         - bazel 6.*
         - python                                   # [build_platform != target_platform]
         - cross-python_{{ target_platform }}       # [build_platform != target_platform]
