--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -244,7 +244,7 @@ outputs:
         - h5py >=3.10
         - ml_dtypes >={{ ml_dtypes_version }},<0.5
         - numpy 1.22        # [py<311]
-        - numpy {{ numpy }} # [py>=311]
+        - numpy <2          # [py>=311]
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5  # [not win]
         - python-flatbuffers >=24.3.25
