Build against numpy2. (update ml_dtypes to enable)

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -9,7 +9,7 @@
 # https://github.com/jax-ml/ml_dtypes/commit/24084d9ed2c3d45bf83b7a9bff833aa185bf9172
 # see
 # https://github.com/tensorflow/tensorflow/blob/v2.17.0-rc1/third_party/py/ml_dtypes/workspace.bzl
-{% set ml_dtypes_version = "0.4.0" %}
+{% set ml_dtypes_version = "0.5.0" %}
 
 package:
   name: tensorflow-split
@@ -242,9 +242,9 @@ outputs:
         - gast >=0.2.1,!=0.5.0,!=0.5.1,!=0.5.2
         - google-pasta >=0.1.1
         - h5py >=3.10
-        - ml_dtypes >={{ ml_dtypes_version }},<0.5
+        - ml_dtypes {{ ml_dtypes_version }}
         - numpy 1.22        # [py<311]
-        - numpy <2          # [py>=311]
+        - numpy {{ numpy }} # [py>=311]
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5  # [not win]
         - python-flatbuffers >=24.3.25
@@ -265,7 +265,7 @@ outputs:
         - google-pasta >=0.1.1
         - grpcio {{ libgrpc }}.*
         - h5py >=3.10
-        - ml_dtypes >={{ ml_dtypes_version }},<0.5
+        - ml_dtypes {{ ml_dtypes_version }}
         - {{ pin_compatible('numpy') }}
         - opt_einsum >=2.3.2
         - protobuf >=3.20.3,<5,!=4.21.0,!=4.21.1,!=4.21.2,!=4.21.3,!=4.21.4,!=4.21.5  # [not win]
@@ -473,7 +473,7 @@ outputs:
         - zlib {{ zlib }}
         - nccl 2.21.5.1      # [cuda_compiler_version != "None"]
       run:
-        - libml_dtypes-headers >={{ ml_dtypes_version }},<0.5
+        - libml_dtypes-headers {{ ml_dtypes_version }}
         # avoid that people without GPUs needlessly download ~200-300MB
         - __cuda  # [cuda_compiler_version != "None"]
     test:
